--- a/app.json
+++ b/app.json
@@ -2,6 +2,22 @@
   "name": "SuperHero",
   "displayName": "SuperHero",
   "expo": {
-    "sdkVersion": "18.0.0"
+    "name": "SuperHero",
+    "description": "A very interesting project.",
+    "slug": "superhero",
+    "privacy": "public",
+    "sdkVersion": "24.0.0",
+    "platforms": ["ios", "android"],
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true
+    }
   }
 }
