--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
+  "main": "node_modules/expo/AppEntry.js",
   "name": "SuperHero",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
     "@expo/vector-icons": "^6.2.1",
-    "expo": "^24.0.2",
     "native-base": "^2.3.5",
     "react": "16.0.0",
-    "react-native": "0.51.0",
+    "react-native": "^0.51.0",
     "react-native-dimension": "^1.0.6",
+    "react-native-modal": "^4.1.1",
     "react-native-video": "^2.0.0",
+    "react-native-video-controls": "^2.0.1",
     "react-native-youtube": "^1.0.1"
   },
   "devDependencies": {
