--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-modal": "^4.1.1",
     "react-native-video": "^2.0.0",
     "react-native-video-controls": "^2.0.1",
-    "react-native-youtube": "^1.0.1"
+    "react-native-youtube": "^1.0.1",
+    "react-navigation": "^1.0.0-beta.22"
   },
   "devDependencies": {
     "babel-jest": "21.2.0",
