starting adding contacts.

--- a/ios/SuperHero/Info.plist
+++ b/ios/SuperHero/Info.plist
@@ -39,7 +39,7 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSExceptionDomains</key>
@@ -66,5 +66,7 @@
 		<string>Zocial.ttf</string>
 		<string>rubicon-icon-font.ttf</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>Need to access your contacts to add friends.</string>
 </dict>
 </plist>
