--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "^0.51.0",
     "react-native-contacts": "^2.0.0",
     "react-native-dimension": "^1.0.6",
+    "react-native-firebase": "^3.2.0",
     "react-native-modal": "^4.1.1",
     "react-native-video": "^2.0.0",
     "react-native-video-controls": "^2.0.1",
