adding the donation scree.

--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@expo/vector-icons": "^6.2.1",
     "native-base": "^2.3.5",
-    "react": "16.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.2.0",
     "react-native": "^0.51.0",
     "react-native-contacts": "^2.0.0",
     "react-native-dimension": "^1.0.6",
     "react-native-firebase": "^3.2.0",
+    "react-native-largelist": "^1.1.0",
     "react-native-modal": "^4.1.1",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-video": "^2.0.0",
     "react-native-video-controls": "^2.0.1",
     "react-native-youtube": "^1.0.1",
