--- a/ios/Podfile
+++ b/ios/Podfile
@@ -3,7 +3,11 @@ platform :ios, '9.0'
 
 target 'SuperHero' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
+
+  use_frameworks!
+  pod 'Firebase/Core'
+  pod 'Firebase/Database'
+  pod 'Firebase/Auth'
 
   # Pods for SuperHero
   target 'SuperHero-tvOSTests' do
